tg-9114 Grupos de prácticas - No funciona el paginador